@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.97">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.98">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -27,14 +27,8 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.97 [20230725]:
-- Removed Uncategorized Menus
-- Made Category Menus for Movies and TV Shows
-- Added Movie Search For Movies
-- Added TV Search For TV Shows
-- Added Movie Genres for Movies
-- Added TV Genres For TV Shows
-- Changed alot of Menu Settings
+Changelog 0.3.98 [20230729]:
+- Added Clean Cache On Update Setting
     </news>
   </extension>
 </addon>
