@@ -7,6 +7,7 @@
 		<setting id="general.titlelanguage" type="labelenum" label="40369" lvalues="40370|40371" default ="40371"/>
 		<setting id="general.searchhistory" type="labelenum" label="40301" values="Yes|No" default="Yes"/>
 		<setting id="general.showchangelog" type="labelenum" label="40426" values="Yes|No" default="Yes"/>
+		<setting id="changelog.clean_cache" type="bool" subsetting="true" label="40488" default="true" visible="eq(-1,Yes)" />
 		<setting id="general.smartscroll" type="bool" label="40483" default="False" />
 		<setting id="general.smartscroll.wait.time" type="slider" label="40487" default="500" range="10,100,2000" option="int" visible="eq(-1,true)" />
 		<setting id="general.spoilers" type="bool" label="40486" default="False" />
